--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ googlemaps==4.10.0
 google-cloud-aiplatform==1.30.0
 requests==2.31.0
 gunicorn==21.2.0
+google-cloud-firestore==2.21.0
+google-cloud-storage==2.19.0
+google-cloud-bigquery==3.38.0
