--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ FLASK_APP=app.py
 SECRET_KEY=replace-this-with-random
 FIREBASE_KEY_PATH=config/firebase-key.json
 GCLOUD_KEY_PATH=config/gcloud-key.json
-GOOGLE_MAPS_API_KEY=       # e.g. AIza.... (optional if using service account)
+GOOGLE_MAPS_API_KEY=      
 PROJECT_ID=your-gcp-project-id
-REGION=us-central1
-VERTEX_MODEL=gemini-1.5-preview  # change if needed
+REGION=asia-south1
+VERTEX_MODEL=gemini-1.5-preview
